# parachain-from-scratch

./: Cargo.toml  README.md  network.toml
parachain-node/: Cargo.toml
parachain-node/src/: cli.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
solo-node/: Cargo.toml
solo-node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
